@@ -1,5 +1,5 @@
-if {![package vsatisfies [package provide Tcl] 8.2]} {
+if {![package vsatisfies [package provide Tcl] 8.4]} {
     # PRAGMA: returnok
     return
 }
-package ifneeded tar 0.7.1 [list source [file join $dir tar.tcl]]
+package ifneeded tar 0.8 [list source [file join $dir tar.tcl]]
