@@ -1,3 +1,13 @@
+2013-08-12  Andreas Kupries  <andreask@activestate.com>
+
+	* tar.man (tar::untar, contents, stat, get): Extended the
+	* tar.tcl: procedures to detect and properly handle @LongName
+	* pkgIndex.tcl: header entries as generated by GNU tar. These
+	  entries contain the file name for the next header entry as file
+	  data, for files whose name is longer than the 100-char field of
+	  the regular header. Version bumped to 0.8. This is a new
+	  feature.
+
 2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
